Trouble shoot issue with shifting/floating background on homepage. Check all CSS files for any elements that are spilling over and correct.

--- a/goose-portfolio/src/Components/Contact/Contact.css
+++ b/goose-portfolio/src/Components/Contact/Contact.css
@@ -123,7 +123,7 @@
   
   }
 
-  @media only screen and (max-width: 390px) {
+  @media only screen and (min-width: 320px) and (max-width: 480px) {
     .Contact {
       min-height: 100%;
       padding-bottom: 15%;
