--- a/goose-portfolio/src/Components/EggSection/EggSection.css
+++ b/goose-portfolio/src/Components/EggSection/EggSection.css
@@ -72,8 +72,8 @@
     box-shadow: 0 5px #fb6fc6;
     transform: translateY(4px);
   }
-
-  @media only screen and (max-width: 390px) {
+  /* Mobile Screen */
+  @media only screen and (min-width: 320px) and (max-width: 480px) {
 
       .UncrackedEgg {
         width: 80%;
