--- a/goose-portfolio/src/Components/Footer/Footer.css
+++ b/goose-portfolio/src/Components/Footer/Footer.css
@@ -68,7 +68,7 @@
 
     .GooseFooter {
         position: relative;
-        width: 120%;
+        width: 100%;
         height: 10%;
         margin-top: -70%;
         margin-left: -10%;
