--- a/goose-portfolio/src/Components/Header/Header.css
+++ b/goose-portfolio/src/Components/Header/Header.css
@@ -64,9 +64,9 @@
     }
     
     .Goose {
-       width: 150%; 
+       width: 100%; 
        margin-bottom: 0%;
-       margin-left: -10%;
+       margin-left: 11%;
 
         
     }
