--- a/goose-portfolio/src/Components/Projects/Projects.css
+++ b/goose-portfolio/src/Components/Projects/Projects.css
@@ -67,7 +67,7 @@
     border-radius: 20%;
   }
 
-  @media only screen and (max-width: 390px) {
+  @media only screen and (min-width: 320px) and (max-width: 480px) {
     .Projects {
         min-height: auto;
         padding-bottom: 20px;
