--- a/goose-portfolio/src/Components/Skills/Skills.css
+++ b/goose-portfolio/src/Components/Skills/Skills.css
@@ -128,7 +128,7 @@
   
   }
 
-  @media only screen and (max-width:390px) {
+  @media only screen and (min-width: 320px) and  (max-width:480px) {
     .Skills {
       max-height: 100%;
       padding-bottom: 50%;
